fix: changed placeholders

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -424,12 +424,12 @@
     "enquiryTypeTriplex": "Triplex",
     "enquiryTypeWarehouse": "Warehouse",
     "leadSourceLabel": "Lead source (optional)",
-    "leadSourcePlaceholder": "Write some here",
+    "leadSourcePlaceholder": "Write here who the lead has come from",
     "descriptionLabel": "Description (optional)",
-    "descriptionPlaceholder": "Write some here",
+    "descriptionPlaceholder": "Write here what the lead is looking for",
     "countOfBedroomsLabel": "Miminum number of bedrooms (optional)",
     "countOfBedroomsPlaceholder": "Choose one option",
-    "totalAreaLabel": "Floor area  sq.ft. (optional)",
+    "totalAreaLabel": "Floor area  sq.m. (optional)",
     "totalAreaFromPlaceHolder": "Min",
     "totalAreaToPlaceHolder": "Max",
     "priceRahgeRentLabel": "* Price range",
