fix: changed placeholders

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -424,9 +424,9 @@
     "enquiryTypeTriplex": "Triplex",
     "enquiryTypeWarehouse": "Warehouse",
     "leadSourceLabel": "Lead source (optional)",
-    "leadSourcePlaceholder": "Write here who the lead has come from",
+    "leadSourcePlaceholder": "A brief description where/who the lead has come from",
     "descriptionLabel": "Description (optional)",
-    "descriptionPlaceholder": "Write here what the lead is looking for",
+    "descriptionPlaceholder": "A brief description of what the lead is looking for",
     "countOfBedroomsLabel": "Miminum number of bedrooms (optional)",
     "countOfBedroomsPlaceholder": "Choose one option",
     "totalAreaLabel": "Floor area  sq.m. (optional)",
