--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -679,6 +679,10 @@
     "try": "Try to find something else.",
     "unread": "unread messages"
   },
+  "chat": {
+    "groupChat": "Group Chat",
+    "info": "Chat info"
+  },
   "noDataFound": {
     "results": "No Matching Results"
   }
