fix: fixed price range fields validation

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -432,12 +432,11 @@
     "totalAreaLabel": "Floor area  sq.m. (optional)",
     "totalAreaFromPlaceHolder": "Min",
     "totalAreaToPlaceHolder": "Max",
-    "priceRahgeRentLabel": "* Price range",
-    "priceRahgeRentFromPlaceholder": "Min",
-    "priceRahgeRentToPlaceholder": "Max",
-    "priceRahgeSellLabel": "* Price range",
-    "priceRahgeSellFromPlaceholder": "Min",
-    "priceRahgeSellToPlaceholder": "Max",
+    "priceRangeLabel": "* Price range",
+    "priceRangeRentFromPlaceholder": "Min",
+    "priceRangeRentToPlaceholder": "Max",
+    "priceRangeBuyFromPlaceholder": "Min",
+    "priceRangeBuyToPlaceholder": "Max",
     "submitButton": "Add lead",
     "locationsLabel": "Location (optional)",
     "locationsPlaceholder": "Location search",
