--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -88,7 +88,8 @@
     "button": "Send Code",
     "emailRequired": "Email is required",
     "emailValid": "Email is not valid",
-    "errorMessage": "Please enter email which you used for registration"
+    "errorMessage": "Please enter email which you used for registration",
+    "successMessage": "Check your mail!"
   },
   "VerifyCodePage": {
     "title": "Enter code",
