--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -661,8 +661,8 @@
     "home": "Go to Home",
     "message": "Sorry, we couldn’t find the page you’re looking for. Perhaps you’ve mistyped the URL? Be sure to check your spelling."
   },
-  "MessagesPage": {
-    "pageTitle": "Messages",
+  "ChatsPage": {
+    "pageTitle": "Chats",
     "addGroupChatButton": "Add group chat",
     "searchPlaceholder": "Enter agent name",
     "noMoreAgents": "No more agents",
