chore(leads-filter): correct status name, add default status

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -586,7 +586,7 @@
     "chatSectionTitle": "Chats",
     "noNotifications": "All messages read",
     "view": "View",
-    "agents": "Agents",
+    "agents": "Matching results",
     "searchPlaceholder": "Search agent by name...",
     "noNotificationsLabel": "no notifications",
     "more99": "more than 99 notifications",
