--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -466,7 +466,7 @@
   "properties": {
     "title": "My properties",
     "alt": "Property photo",
-    "description": "Tap to see description",
+    "description": "Tap the card to see details",
     "for_sale": "For Sale",
     "for_rent": "For Rent",
     "for_sale_and_rent": "For Sale and Rent",
