fix: added chat members:

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -683,7 +683,7 @@
     "btnDeleteAgentFromList": "Remove agent from group",
     "groupName": "Group name:",
     "results": "Chats found with",
-    "chatMembers": "Chat members",
+    "chatMembers": "Chat members:",
     "deleteChat": "Delete chat",
     "addAgentsToChat": "Add agents to chat",
     "createdOn": "Created on",
