feat: styling items

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -729,6 +729,6 @@
     "lesson": "Lesson",
     "viewed": "Viewed:",
     "searchTopic": "Search topic",
-    "error": "Something went wrong!"
+    "somethingWentWrong": "Something went wrong!"
   }
 }
