feat: added marching results elem

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -729,6 +729,7 @@
     "lesson": "Lesson",
     "viewed": "Viewed:",
     "searchTopic": "Search topic",
-    "somethingWentWrong": "Something went wrong!"
+    "somethingWentWrong": "Something went wrong!",
+    "matchingResults": "Matching results"
   }
 }
