fix: text mistake

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -722,7 +722,7 @@
   },
   "content": {
     "content": "Content",
-    "toQuickStartGuideText": "Here you can fild help with your activities in ZenBitRock",
+    "toQuickStartGuideText": "Here you can find help with your activities in ZenBitRock",
     "titleGoToQSG": "QuickStart Guide",
     "videoTutorials": "Video tutorials",
     "articlesAndTips": "Articles and Tips",
