fix: changed price range placeholders and validation

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -397,7 +397,7 @@
     "mainTitle": "Add lead",
     "offeringTypeLabel": "* Offering type",
     "offeringTypePlaceholder": "Choose one option",
-    "offerTypeBuy": "For buy",
+    "offerTypeBuy": "To buy",
     "offerTypeSale": "For sale",
     "offerTypeRent": "For rent",
     "offerTypeLet": "For let",
@@ -441,13 +441,13 @@
     "countOfBedroomsLabel": "Miminum number of bedrooms (optional)",
     "countOfBedroomsPlaceholder": "Choose one option",
     "totalAreaLabel": "Floor area  sq.m. (optional)",
-    "totalAreaFromPlaceHolder": "Min",
-    "totalAreaToPlaceHolder": "Max",
+    "totalAreaFromPlaceHolder": "From",
+    "totalAreaToPlaceHolder": "To 10000",
     "priceRangeLabel": "* Price range",
-    "priceRangeRentFromPlaceholder": "Min",
-    "priceRangeRentToPlaceholder": "Max",
-    "priceRangeBuyFromPlaceholder": "Min",
-    "priceRangeBuyToPlaceholder": "Max",
+    "priceRangeRentFromPlaceholder": "From 100",
+    "priceRangeRentToPlaceholder": "To 10000",
+    "priceRangeBuyFromPlaceholder": "From 10000",
+    "priceRangeBuyToPlaceholder": "To 10000000",
     "submitButton": "Add lead",
     "locationsLabel": "Location (optional)",
     "locationsPlaceholder": "Location search",
