--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -678,7 +678,7 @@
     "addGroupBtnTxt": "Add group chat",
     "groupNameInputPlaceholder": "Enter agent name",
     "groupNameLabel": "Enter group name",
-    "groupNameInvalid": "Group name must contains 10 symbols minimum",
+    "groupNameInvalid": "Group name must contains from 2 to 15 symbols",
     "groupNameRequired": "Group name required",
     "btnDeleteAgentFromList": "Remove agent from group",
     "groupName": "Group name:",
