fix: red delete button

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -694,7 +694,7 @@
     "title": "Chat info",
     "back": "Back",
     "doYouWantDeleteChat": "Do you want delete chat?",
-    "yesDelete": "Yes delete",
+    "yesDelete": "Yes, delete",
     "somethingWentWrong": "Something went wrong",
     "editGroupChatName": "Edit group chat name",
     "enterNewName": "Enter new name",
