--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -592,7 +592,8 @@
     "noNotificationsLabel": "no notifications",
     "more99": "more than 99 notifications",
     "notifications": "notifications",
-    "error": "Something went wrong!"
+    "error": "Something went wrong!",
+    "deleted": "(Account deleted)"
   },
   "page500": {
     "pageTitle": "500 Internal Server Error",
