--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -741,6 +741,7 @@
     "step11": "Tap the logo to view the Chats page",
     "step12": "This is Chats page. See all your chats here",
     "step13": "Use this button to create a group chat",
-    "step14": "Tap on a chat to open it and start a conversation"
+    "step14": "Tap on a chat to open it and start a conversation",
+    "step15": "Visit Content page for other useful informaiton"
   }
 }
