--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -743,7 +743,8 @@
     "step12": "This is Chats page. See all your chats here",
     "step13": "Use this button to create a group chat",
     "step14": "Tap on a chat to open it and start a conversation",
-    "step15": "Visit Content page for other useful informaiton"
+    "step15": "Visit Content page for other useful informaiton",
+    "step16": "Thank you for your attention!"
   },
   "guidePage": {
     "title": "QuickStart Guide",
