--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -656,7 +656,7 @@
     "date": "Date & Time",
     "activity": "Activity",
     "open_history": "View History",
-    "error":"Something went wrong!"
+    "error": "Something went wrong!"
   },
   "notFoundView": {
     "notFound": " Sorry, Page Not Found!",
@@ -694,7 +694,7 @@
     "chatName": "Chat name",
     "title": "Chat info",
     "back": "Back",
-    "doYouWantDeleteChat": "Do you want delete chat?",
+    "doYouWantDeleteChat": "Do you want to delete the chat?",
     "yesDelete": "Yes, delete",
     "somethingWentWrong": "Something went wrong",
     "editGroupChatName": "Edit group chat name",
