fix: chat name validation message

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -679,7 +679,7 @@
     "addGroupBtnTxt": "Add group chat",
     "groupNameInputPlaceholder": "Enter agent name",
     "groupNameLabel": "Enter group name",
-    "groupNameInvalid": "Group name must contains from 2 to 15 symbols",
+    "groupNameInvalid": "The group name should be 2 to 15 characters long, without Cyrillic characters.",
     "groupNameRequired": "Group name required",
     "btnDeleteAgentFromList": "Remove agent from group",
     "groupName": "Group name:",
