fix: changed min value of totalArea and changed validation

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -441,7 +441,7 @@
     "countOfBedroomsLabel": "Miminum number of bedrooms (optional)",
     "countOfBedroomsPlaceholder": "Choose one option",
     "totalAreaLabel": "Floor area  sq.m. (optional)",
-    "totalAreaFromPlaceHolder": "From",
+    "totalAreaFromPlaceHolder": "From 10",
     "totalAreaToPlaceHolder": "To 10000",
     "priceRangeLabel": "* Price range",
     "priceRangeRentFromPlaceholder": "From 100",
@@ -456,8 +456,8 @@
     "yupErrorMessageLeadSource": "Latin letters, 10-200 characters",
     "yupErrorMessageDescription": "Latin letters, 10-200 characters",
     "yupErrorMessageEnquiryType": "Enquiry type is required",
-    "yupErrorMessageTotalAreaFrom": "0-10000, less then max value",
-    "yupErrorMessageTotalAreaTo": "0-10000, more than min value",
+    "yupErrorMessageTotalAreaFrom": "10-10000, less then max value",
+    "yupErrorMessageTotalAreaTo": "10-10000, more than min value",
     "yupErrorMessagePriceRangeRentFrom": "100-10000, less than max value",
     "yupErrorMessagePriceRangeRentTo": "100-10000, more than min value",
     "yupErrorMessagePriceRangeBuyFrom": "10000-10000000, less than max value",
