fix: corrected contact made status display

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -581,7 +581,8 @@
     "leads": "leads",
     "all": "Any",
     "error": "Something went wrong!",
-    "lookingFor": "Looking for"
+    "lookingFor": "Looking for",
+    "contactMade": "Contact Made"
   },
   "agents": {
     "pageTitle": "Agent network",
