--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -704,7 +704,8 @@
     "somethingWentWrong": "Something went wrong",
     "editGroupChatName": "Edit group chat name",
     "enterNewName": "Enter new name",
-    "changeGroupChatName": "Change group chat name"
+    "changeGroupChatName": "Change group chat name",
+    "you": "you"
   },
   "privateChat": {
     "title": "Chat",
