fix: refactor content

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -769,8 +769,8 @@
     "content": "Content",
     "toQuickStartGuideText": "Here you can find help with your activities in ZenBitRock",
     "titleGoToQSG": "QuickStart Guide",
-    "videoTutorials": "Video tutorials",
-    "articlesAndTips": "Articles and Tips",
+    "videoTitle": "Video tutorials",
+    "articleTitle": "Articles and Tips",
     "lesson": "Lesson",
     "viewed": "Viewed:",
     "searchTopic": "Search topic",
