--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -733,8 +733,8 @@
     "lastButton": "Finish",
     "nextButton": "Next",
     "openDialogButton": "Open the dialog",
-    "skipButton": "Exit onboarding",
-    "step0": "Let`s start onboarding!",
+    "skipButton": "Exit guide",
+    "step0": "Let`s start guide!",
     "step1": "This is Main page. View notifications and properties here",
     "step2": "Tap property card to view details",
     "step3": "Tap Profile icon to view and edit profile",
