fix: changed text

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -179,7 +179,7 @@
       "item7Title": "Disclaimer of Warranties",
       "item7Text": "Our services are provided 'as is' and without warranties of any kind, either expressed or implied.",
       "item8Title": "Limitation of Liability",
-      "item8Text": "AgenWise is not liable for any direct or indirect damages that result from the use of our services or any interruptions, errors, or omissions in our services.",
+      "item8Text": "AgentWise is not liable for any direct or indirect damages that result from the use of our services or any interruptions, errors, or omissions in our services.",
       "item9Title": "Termination",
       "item9Text": "We reserve the right to terminate or suspend your access to our services at our discretion, without prior notice.",
       "item10Title": "Changes to Terms and Conditions",
@@ -279,11 +279,11 @@
     "update": "Change photo",
     "upload": "Upload photo",
     "aboutLabel": "About me",
-    "aboutPlaceholder": "I used to be an MI5 agent but I messed up my secrect misssion so now I work as property agent",
+    "aboutPlaceholder": "I used to be an MI5 agent but I messed up my secret mission so now I work as property agent",
     "city": "* City",
     "changePass": "Change password",
     "deleteProfile": "Delete profile",
-    "recieveNotifications": "Recieve push notifications ",
+    "recieveNotifications": "Receive push notifications ",
     "settingsTitle": "Settings",
     "settingsSubtitle1": "Privacy settings",
     "settingsSubtitle2": "Notifications",
@@ -322,7 +322,7 @@
     "settingsSubtitle2": "Notifications",
     "changePass": "Change password",
     "deleteProfile": "Delete profile",
-    "recieveNotifications": "Recieve push notifications ",
+    "recieveNotifications": "Receive push notifications ",
     "editLink": "Edit profile",
     "agencyLink": "https://blagovist.ua/",
     "countryTxt": "Country",
@@ -372,7 +372,7 @@
       "filterOptions": {
         "propertyStatus": {
           "pending": "Pending",
-          "avaliable": "Avaliable",
+          "avaliable": "Available",
           "reserved": "Reserved",
           "sold": "Sold",
           "rented": "Rented",
@@ -438,7 +438,7 @@
     "leadSourcePlaceholder": "A brief description where/who the lead has come from",
     "descriptionLabel": "Description (optional)",
     "descriptionPlaceholder": "A brief description of what the lead is looking for",
-    "countOfBedroomsLabel": "Miminum number of bedrooms (optional)",
+    "countOfBedroomsLabel": "Minimum number of bedrooms (optional)",
     "countOfBedroomsPlaceholder": "Choose one option",
     "totalAreaLabel": "Floor area  sq.m. (optional)",
     "totalAreaFromPlaceHolder": "From 10",
@@ -523,7 +523,7 @@
     "autonomous_heating_system": "Autonomous",
     "central_heating": "Central",
     "none": "None",
-    "electricity": "Electrycity",
+    "electricity": "Electricity",
     "reception": "Reception",
     "water": "Water",
     "air": "Air Condition",
@@ -541,7 +541,7 @@
     "elevator": "Elevator",
     "bedrooms": "Bedrooms",
     "bathrooms": "Bathrooms",
-    "livingrooms": "Livingrooms",
+    "livingrooms": "Living rooms",
     "kitchenType": "Kitchen Type",
     "petsAllowed": "Pets Allowed",
     "petsNotAllowed": "Pets Not Allowed",
@@ -745,11 +745,11 @@
     "step8": "Tap Agents icon to view the Agents page",
     "step9": "This is Agents page. See all your colleagues here",
     "step10": "Tap an agent to start chatting",
-    "step11": "Tap the logo to view the Chats page",
+    "step11": "Tap the Chats icon to view the Chats page",
     "step12": "This is Chats page. See all your chats here",
     "step13": "Use this button to create a group chat",
     "step14": "Tap on a chat to open it and start a conversation",
-    "step15": "Visit Content page for other useful informaiton",
+    "step15": "Visit Content page for other useful information",
     "step16": "Thank you for your attention!"
   },
   "guidePage": {
@@ -784,7 +784,7 @@
   },
   "tutorialPage": {
     "title": "Tutorial",
-    "welcomeTxt": "Welcome to Zenbitrock - the wisest real estate app aimed at your professional success!",
+    "welcomeTxt": "Welcome to ZenBitRock - the wisest real estate app aimed at your professional success!",
     "welcomeSubTxt": "You are one of them now :)",
     "exit": "Exit",
     "start": "Next",
