fix: add corrections

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -283,7 +283,7 @@
     "city": "* City",
     "changePass": "Change password",
     "deleteProfile": "Delete profile",
-    "recieveNotifications": "Receive push notifications ",
+    "recieveNotifications": "Receive notifications ",
     "settingsTitle": "Settings",
     "settingsSubtitle1": "Privacy settings",
     "settingsSubtitle2": "Notifications",
@@ -784,15 +784,17 @@
     "matchingResults": "Matching results",
     "addContent": "Add content",
     "titleRequired": "Title is required",
+    "thumbnailRequired": "Thumbnail is required",
     "linkRequired": "Link is required",
     "title": "Title",
     "link": "Link",
-    "screenshot": "Screenshot",
+    "screenshot": "Thumbnail",
     "titlePlaceholder": "Enter title",
     "linkPlaceholder": "Enter link",
-    "screenshotPlaceholder": "Enter screenshot link",
+    "screenshotPlaceholder": "Enter thumbnail link",
     "cancel": "Cancel",
     "invalidUrl": "Invalid URL",
+    "invalidTitle": "Minimum 3 - maximum 100 characters, latin letters, numbers, special characters",
     "deleteApprove": "Do you want to delete this content?",
     "delete": "Delete",
     "addLink": " Add new link:"
