fix: lead history informative to contact made

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -656,7 +656,7 @@
     "asleep": "Asleep",
     "closed_won": "Closed Won",
     "closed_lost": "Closed Lost",
-    "informative": "Informative",
+    "informative": "Contact Made",
     "feedback": "Feedback",
     "stalled": "Stalled",
     "closed": "Closed",
