feat: change bedrooms to min.bedrooms

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -364,7 +364,7 @@
       "propertyType": "Property type",
       "propertyStatus": "Status",
       "priceRange": "Price range",
-      "bedrooms": "Bedrooms",
+      "bedrooms": "Min.Bedrooms",
       "apply": "Apply filters",
       "locationsPlaceholder": "Location search",
       "priceRangeRentFromPlaceholder": "Min",
